# depth_correction

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dependencies.rosinstall  package.xml  python_requirements.txt  setup.py
config/: dataset.rviz  depthcorr.rviz  dist2desk.rviz  leica_ouster.rviz  local_opt.rviz  play.rviz  poseopt.rviz  robot_data.rviz  slam.rviz  tf_test.rviz  train.rviz  train_asl_laser.rviz  train_demo.rviz  train_kitti.rviz  train_semantic_kitti.rviz
docker/: Dockerfile
docs/: install.md  kitti360.md  singularity.md
examples/: optimization  optimization_icp
launch/: cloud_filter.launch  cloud_optimization.launch  dataset.launch  demo.launch  depth_correction.launch  depth_denoising.launch  dist2desk.launch  leica_ouster_postproc.launch  leica_ouster_postproc_big_board.launch  local_optimization.launch  optimization.launch  play.launch  pose_optimization.launch  reconstruction_eval.launch  record.launch  robot_data.launch  rviz.launch  slam.launch  slam_eval.launch  slam_eval_ddd.launch  slam_fee_corridor_ddd.launch  slam_gt_map.launch  tf_test.launch  train.launch  train_demo.launch
notebooks/: asl_parser.ipynb  bias_estimation_postprocessing-point-to-plane.ipynb  bias_estimation_postprocessing.ipynb  demo.ipynb  depth_bias.ipynb  depth_cloud.ipynb  for_paper.ipynb  optimization_sim.ipynb  pointcloud_deformation_demo.ipynb  rgbd_pcd_normals.ipynb  test.ipynb
scripts/: bias_estimation  bias_estimation_big_board  cloud_alignment  cloud_filter  cloud_publisher  compare_to_ddd  create_fee_corridor  dataset_publisher  debugger  (+36 more)
(+46 files in other folders)
